@@ -15,17 +15,20 @@ import com.upc.cicloestrella.exceptions.EntityIdNotFoundException;
 import com.upc.cicloestrella.interfaces.services.application.RequestServiceInterface;
 import com.upc.cicloestrella.mappers.RequestMapper;
 import com.upc.cicloestrella.repositories.interfaces.application.*;
+import com.upc.cicloestrella.services.logic.ImageCreatorService;
 import com.upc.cicloestrella.specifications.application.RequestSpecification;
 import com.upc.cicloestrella.validators.application.TeacherValidationJsonService;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
@@ -40,14 +43,12 @@ public class RequestService implements RequestServiceInterface {
     private final ObjectMapper objectMapper;
     private final RequestMapper requestMapper;
 
-
     @Override
     public RequestContentResponseDTO save(Long studentId, RequestContentRequestDTO requestContentRequestDTO) throws JsonProcessingException {
         Student student = studentRepository.findById(studentId).orElseThrow(() -> new EntityIdNotFoundException(("No se encontro el estudiante con id: " + studentId)));
 
         Object contentDTO = validateContentType(requestContentRequestDTO);
         JsonNode content = objectMapper.convertValue(contentDTO, JsonNode.class);
-
         Request request = Request
                 .builder()
                 .student(student)
@@ -102,8 +103,8 @@ public class RequestService implements RequestServiceInterface {
     public Page<RequestContentResponseDTO> index(Request.RequestStatus status , RequestTypeEnum type , String studentName , LocalDateTime startDate , LocalDateTime endDate , String teacherName , Long courseId , Long campusId ,  int page , int size) {
         Specification<Request> specification = RequestSpecification.build(status , type , studentName , startDate , endDate);
         Pageable pageable = PageRequest.of(page, size);
-        Page<Request> requestPage = requestRepository.findAll(specification, pageable);
-        return requestPage.getContent().stream()
+        List<Request> all = requestRepository.findAll(specification);
+        List<RequestContentResponseDTO> filtered = all.stream()
                 .map(r -> {
                     try {
                         return requestMapper.toDTO(r);
@@ -111,14 +112,20 @@ public class RequestService implements RequestServiceInterface {
                         throw new RuntimeException(e);
                     }
                 })
-                .filter(dto -> matchesJson(dto , teacherName , courseId , campusId))
-                .collect(Collectors.collectingAndThen(Collectors.toList(),
-                        list -> new org.springframework.data.domain.PageImpl<>(list, pageable, list.size())));
+                .filter(dto -> matchesJson(dto, teacherName, courseId, campusId))
+                .toList();
+
+        int start = Math.min((int) pageable.getOffset(), filtered.size());
+        int end = Math.min((start + pageable.getPageSize()), filtered.size());
+        List<RequestContentResponseDTO> pageContent = filtered.subList(start, end);
+
+        return new PageImpl<>(pageContent, pageable, filtered.size());
     }
 
     private Object validateContentType(RequestContentRequestDTO requestContentRequestDTO) {
         if (Objects.requireNonNull(requestContentRequestDTO.getRequestType()) == RequestTypeEnum.TEACHER) {
             return teacherValidationJsonService.validate(requestContentRequestDTO);
+
         }
         return null;
     }
@@ -149,6 +156,4 @@ public class RequestService implements RequestServiceInterface {
 
         return true;
     }
-
-
 }
